--- a/sub_basic.html
+++ b/sub_basic.html
@@ -10,18 +10,73 @@
   <link rel="stylesheet" href="./css/sass-common.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/content.css">
+  <script src="./js/jquery-2.1.4.min.js"></script>
+  <script src="./js/jquery.easing.1.3.js"></script>
+  <script src="./js/common.js"></script>
 </head>
 <body>
   <div id="wrapper">
     <aside id="sidebar">
-
+      <div class="logo-box">        
+      </div>
+      <nav class="nav">
+        <ul class="depth_1">
+          <li>
+            <a href="#">depth_1<span class="ic-arrow"></span></a>
+            <ul class="depth_2">
+              <li><a href="#">depth_2</a></li>
+              <li><a href="#">depth_2</a></li>
+              <li><a href="#">depth_2</a></li>
+            </ul>
+          </li>
+          <li><a href="#">depth_1</a></li>
+          <li><a href="#">depth_1</a></li>
+        </ul>
+      </nav>
     </aside>
+    <script>
+      (function(){
+        var depth_1 = $('.depth_1 > li > a')
+        depth_1.each(function(){
+          $(this).on('click',function(){
+            var _h = $(this).next('.depth_2').height();
+            var h = $(this).next('.depth_2').prop('scrollHeight')
+            if(_h == 0){
+              $(this).next('.depth_2').height(h+'px');
+              $(this).addClass('on');
+            }else{
+              $(this).next('.depth_2').height(0);
+              $(this).removeClass('on');
+            }
+          })
+        })
+      })();
+    </script>
     <section id="container">
       <header id="header">
-
+        <div>
+          <div class="search-box">
+            <input type="text" placeholder="통합검색">
+            <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+            </button>
+          </div>
+        </div>
+        <div class="profile">
+          <button type="button" class="btn btn-pop-over" onclick="popOver(this,'#profile_box','bot')">
+            <span class="name">name</span><span class="ic-arrow"></span>
+          </button>
+          <div class="pop-over bot" id="profile_box">
+            <ul>
+              <li><a href="#">profile</a></li>
+            </ul>
+          </div>
+        </div>
       </header>
       <div id="content">
-
+        <div class="box-card content-box">
+          
+        </div>
       </div>
       <footer id="footer">
         
